[gd_scene load_steps=8 format=3 uid="uid://cakje4dknu4wv"]

[ext_resource type="Script" path="res://nodes/player/ActorScene.gd" id="1_bxpna"]
[ext_resource type="Script" path="res://nodes/player/HitboxScene.gd" id="2_f5nxu"]
[ext_resource type="Script" path="res://nodes/player/CollisionManager.gd" id="3_ovgnm"]
[ext_resource type="Script" path="res://nodes/player/ProjectileManager.gd" id="4_g3gxx"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_5lmwh"]
resource_local_to_scene = true

[sub_resource type="RectangleShape2D" id="RectangleShape2D_m1lps"]
resource_local_to_scene = true

[sub_resource type="RectangleShape2D" id="RectangleShape2D_cyfkj"]
size = Vector2(8, 36)

[node name="ActorScene" type="Node2D"]
script = ExtResource("1_bxpna")

[node name="CharacterSprite" type="Sprite2D" parent="."]
hframes = 7

[node name="CollisionManager" type="Node2D" parent="."]
script = ExtResource("3_ovgnm")

[node name="AttackHitbox" type="Area2D" parent="CollisionManager"]
collision_layer = 0
monitorable = false
script = ExtResource("2_f5nxu")

[node name="CollisionShape2D" type="CollisionShape2D" parent="CollisionManager/AttackHitbox"]
shape = SubResource("RectangleShape2D_5lmwh")

[node name="Hitbox" type="Area2D" parent="CollisionManager"]
collision_mask = 0
monitoring = false
script = ExtResource("2_f5nxu")

[node name="CollisionShape2D" type="CollisionShape2D" parent="CollisionManager/Hitbox"]
shape = SubResource("RectangleShape2D_m1lps")

[node name="HitAudio" type="AudioStreamPlayer2D" parent="CollisionManager"]

[node name="EffectRoot" type="Node2D" parent="CollisionManager"]
position = Vector2(18, 0)

[node name="ProjectileManager" type="Node" parent="."]
script = ExtResource("4_g3gxx")

[node name="MoveAudio" type="AudioStreamPlayer2D" parent="."]

[node name="MovementCollider" type="Area2D" parent="."]
position = Vector2(0, 18)
collision_layer = 16
collision_mask = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="MovementCollider"]
position = Vector2(0, -18)
shape = SubResource("RectangleShape2D_cyfkj")

[connection signal="destroy_attacker" from="CollisionManager" to="." method="_on_collision_manager_destroy_attacker"]
